# events

./: .gitignore  LICENSE  README.md  format.sh  meson.build
examples/: imgui.ini  main.cpp  meson.build  run.sh
examples/subprojects/: imgui-util-events.wrap
include/imgui-util-events/: event_dispatcher.hpp  glfw_key_event.hpp  input_event.hpp  navigation_event.hpp  sdl_key_event.hpp
